Fixed yet another JDK 8 compatibility issue